--- a/tuCodigo/tucodigo_front/angular.json
+++ b/tuCodigo/tucodigo_front/angular.json
@@ -29,8 +29,7 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/animate.css/animate.min.css",
-              "node_modules/imagehover.css-master/css/imagehover.min.css"
+              "node_modules/animate.css/animate.min.css"              
             ],
             "scripts": ["node_modules/bootstrap/dist/js/bootstrap.min.js"]
           },
