--- a/tuCodigo/tucodigo_front/package.json
+++ b/tuCodigo/tucodigo_front/package.json
@@ -21,8 +21,9 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
     "jwt-decode": "^3.1.2",
+    "ngx-typed-js": "^2.1.1",
     "rxjs": "~7.5.0",
-    "sweetalert2": "^11.4.4",
+    "sweetalert2": "^11.4.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
